src/test/ui/consts/const-multi-ref.stderr
error[E0017]: references in constants may only refer to immutable values
  --> $DIR/const-multi-ref.rs:6:13
   |
LL |     let p = &mut a;
   |             ^^^^^^ constants require immutable values

error: aborting due to previous error

For more information about this error, try `rustc --explain E0017`.
